tests/snapshots/test__from_fixtures@range__add_maximum.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    type: number
  rhs:
    maximum: 1
    type: number
input_file: tests/fixtures/range/add_maximum.json
---
[
    Change {
        path: "",
        change: RangeAdd {
            added: Maximum,
            value: 1.0,
        },
    },
]
