tests/snapshots/test__from_fixtures@range__add_minimum.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    type: number
  rhs:
    minimum: 1
    type: number
input_file: tests/fixtures/range/add_minimum.json
---
[
    Change {
        path: "",
        change: RangeAdd {
            added: Minimum(
                1.0,
            ),
        },
    },
]
