tests/snapshots/test__from_fixtures@range__change_minimum.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    minimum: 1
    type: number
  rhs:
    minimum: 1.3
    type: number
input_file: tests/fixtures/range/change_minimum.json
---
[
    Change {
        path: "",
        change: RangeChange {
            changed: Minimum,
            old_value: 1.0,
            new_value: 1.3,
        },
    },
]
