tests/snapshots/test__from_fixtures@range__minimum.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/range/minimum.json
---
[
    Change {
        path: "",
        change: RangeAdd {
            added: Minimum,
            value: 1.0,
        },
    },
]
