tests/snapshots/test__from_fixtures@range__redundant_minimum_2.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    exclusiveMinimum: 2
    minimum: 1
    type: number
  rhs:
    exclusiveMinimum: 0.4
    type: number
input_file: tests/fixtures/range/redundant_minimum_2.json
---
[
    Change {
        path: "",
        change: RangeChange {
            old_value: ExclusiveMinimum(
                2.0,
            ),
            new_value: ExclusiveMinimum(
                0.4,
            ),
        },
    },
]
