tests/snapshots/test__from_fixtures@range__redundant_minimum_3.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    exclusiveMinimum: 0.5
    minimum: 1
    type: number
  rhs:
    exclusiveMinimum: 0.4
    type: number
input_file: tests/fixtures/range/redundant_minimum_3.json
---
[
    Change {
        path: "",
        change: RangeChange {
            old_value: Minimum(
                1.0,
            ),
            new_value: ExclusiveMinimum(
                0.4,
            ),
        },
    },
]
