tests/snapshots/test__from_fixtures@range__remove_maximum.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    maximum: 1
    type: number
  rhs:
    type: number
input_file: tests/fixtures/range/remove_maximum.json
---
[
    Change {
        path: "",
        change: RangeRemove {
            removed: Maximum,
            value: 1.0,
        },
    },
]
