tests/snapshots/test__from_fixtures@range__remove_minimum.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    minimum: 1
    type: number
  rhs:
    type: number
input_file: tests/fixtures/range/remove_minimum.json
---
[
    Change {
        path: "",
        change: RangeRemove {
            removed: Minimum,
            value: 1.0,
        },
    },
]
