tests/snapshots/test__from_fixtures@range__to_exclusive_maximum.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    maximum: 1
    type: number
  rhs:
    exclusiveMaximum: 1
    type: number
input_file: tests/fixtures/range/to_exclusive_maximum.json
---
[
    Change {
        path: "",
        change: RangeChange {
            old_value: Maximum(
                1.0,
            ),
            new_value: ExclusiveMaximum(
                1.0,
            ),
        },
    },
]
