tests/snapshots/test__from_fixtures@range__to_exclusive_minimum.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    minimum: 1
    type: number
  rhs:
    exclusiveMinimum: 1
    type: number
input_file: tests/fixtures/range/to_exclusive_minimum.json
---
[
    Change {
        path: "",
        change: RangeChange {
            old_value: Minimum(
                1.0,
            ),
            new_value: ExclusiveMinimum(
                1.0,
            ),
        },
    },
]
