tests/snapshots/test__from_fixtures@range__unchanged_minimum.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/range/unchanged_minimum.json
---
[]
